AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = manaplus dyecmd

manaplus_CXXFLAGS = -DPKG_DATADIR=\""$(pkgdatadir)/"\"      \
		-DLOCALEDIR=\""$(localedir)"\"           \
		-Wall

if ENABLE_PORTABLE
manaplus_CXXFLAGS += -DENABLE_PORTABLE
endif

if USE_OPENGL
manaplus_CXXFLAGS += -DUSE_OPENGL
endif

if ENABLE_MEM_DEBUG
manaplus_CXXFLAGS += -DENABLE_MEM_DEBUG -DDEBUG_DUMP_LEAKS

manaplus_SOURCES = debug/debug_new.cpp \
	      debug/debug_new.h \
	      debug/fast_mutex.h \
	      debug/static_assert.h
else
manaplus_SOURCES =
endif

if USE_INTERNALGUICHAN
dyecmd_CXXFLAGS = -I$(srcdir)/guichan/include -DUSE_INTERNALGUICHAN
dyecmd_SOURCES = guichan/actionevent.cpp \
	      guichan/cliprectangle.cpp \
	      guichan/color.cpp \
	      guichan/event.cpp \
	      guichan/exception.cpp \
	      guichan/font.cpp \
	      guichan/graphics.cpp \
	      guichan/rectangle.cpp \
	      guichan/widget.cpp \
	      guichan/include/guichan/actionevent.hpp \
	      guichan/include/guichan/cliprectangle.hpp \
	      guichan/include/guichan/color.hpp \
	      guichan/include/guichan/event.hpp \
	      guichan/include/guichan/exception.hpp \
	      guichan/include/guichan/font.hpp \
	      guichan/include/guichan/graphics.hpp \
	      guichan/include/guichan/rectangle.hpp \
	      guichan/include/guichan/widget.hpp
else
dyecmd_CXXFLAGS =
dyecmd_SOURCES =
endif

dyecmd_SOURCES += dyetool/dyemain.cpp \
	      animatedsprite.cpp \
	      animatedsprite.h \
	      animationdelayload.cpp \
	      animationdelayload.h \
	      configuration.cpp \
	      configuration.h \
	      graphicsmanager.cpp \
	      graphicsmanager.h \
	      graphicsvertexes.cpp \
	      graphicsvertexes.h \
	      logger.cpp \
	      logger.h \
	      navigationmanager.cpp \
	      navigationmanager.h \
	      walklayer.cpp \
	      walklayer.h \
	      render/graphics.cpp \
	      render/graphics.h \
	      render/renderers.cpp \
	      render/renderers.h \
	      render/sdl2softwaregraphics.cpp \
	      render/sdl2softwaregraphics.h \
	      render/sdl2graphics.cpp \
	      render/sdl2graphics.h \
	      render/sdlgraphics.cpp \
	      render/sdlgraphics.h \
	      resources/action.cpp \
	      resources/action.h \
	      resources/animation.cpp \
	      resources/animation.h \
	      resources/db/palettedb.cpp \
	      resources/db/palettedb.h \
	      resources/dye.cpp \
	      resources/dye.h \
	      resources/image.cpp \
	      resources/image.h \
	      resources/imagehelper.cpp \
	      resources/imagehelper.h \
	      resources/imageset.cpp \
	      resources/imageset.h \
	      resources/imagewriter.cpp \
	      resources/imagewriter.h \
	      resources/resource.cpp \
	      resources/resource.h \
	      resources/resourcemanager.cpp \
	      resources/resourcemanager.h \
	      resources/sdl2softwareimagehelper.cpp \
	      resources/sdl2softwareimagehelper.h \
	      resources/sdl2imagehelper.cpp \
	      resources/sdl2imagehelper.h \
	      resources/sdlimagehelper.cpp \
	      resources/sdlimagehelper.h \
	      resources/sdlmusic.cpp \
	      resources/sdlmusic.h \
	      resources/soundeffect.cpp \
	      resources/soundeffect.h \
	      resources/subimage.cpp \
	      resources/subimage.h \
	      resources/surfaceimagehelper.cpp \
	      resources/surfaceimagehelper.h \
	      resources/spritedef.cpp \
	      resources/spritedef.h \
	      utils/mkdir.cpp \
	      utils/mkdir.h \
	      utils/paths.cpp \
	      utils/paths.h \
	      utils/perfomance.cpp \
	      utils/perfomance.h \
	      utils/physfsrwops.cpp \
	      utils/physfsrwops.h \
	      utils/physfstools.cpp \
	      utils/physfstools.h \
	      utils/sdl2helper.cpp \
	      utils/sdl2helper.h \
	      utils/sdlhelper.cpp \
	      utils/sdlhelper.h \
	      utils/stringutils.cpp \
	      utils/stringutils.h \
	      utils/timer.cpp \
	      utils/timer.h \
	      utils/xml.cpp \
	      utils/xml.h \
	      utils/translation/podict.cpp \
	      utils/translation/podict.h

if USE_MUMBLE
manaplus_CXXFLAGS += -DUSE_MUMBLE
endif

if ENABLE_CHECKS
manaplus_CXXFLAGS += -DENABLE_CHECKS
endif

if USE_SDL2
if USE_INTERNALSDLGFX
dyecmd_CXXFLAGS += -I$(srcdir)/sdl2gfx -DUSE_SDL2
dyecmd_SOURCES += sdl2gfx/SDL2_framerate.c \
	      sdl2gfx/SDL2_framerate.h \
	      sdl2gfx/SDL2_rotozoom.c \
	      sdl2gfx/SDL2_rotozoom.h

manaplus_CXXFLAGS += -I$(srcdir)/sdl2gfx -DUSE_SDL2
manaplus_SOURCES += sdl2gfx/SDL2_framerate.c \
	      sdl2gfx/SDL2_framerate.h \
	      sdl2gfx/SDL2_rotozoom.c \
	      sdl2gfx/SDL2_rotozoom.h
else
dyecmd_CXXFLAGS += -DUSE_SDL2
manaplus_CXXFLAGS += -DUSE_SDL2
endif
endif

if USE_INTERNALGUICHAN
manaplus_CXXFLAGS += -I$(srcdir)/guichan/include -DUSE_INTERNALGUICHAN
manaplus_SOURCES += guichan/include/guichan/actionevent.hpp \
	      guichan/include/guichan/actionlistener.hpp \
	      guichan/include/guichan/basiccontainer.hpp \
	      guichan/include/guichan/cliprectangle.hpp \
	      guichan/include/guichan/color.hpp \
	      guichan/include/guichan/deathlistener.hpp \
	      guichan/include/guichan/event.hpp \
	      guichan/include/guichan/exception.hpp \
	      guichan/include/guichan/focushandler.hpp \
	      guichan/include/guichan/focuslistener.hpp \
	      guichan/include/guichan/font.hpp \
	      guichan/include/guichan/graphics.hpp \
	      guichan/include/guichan/gui.hpp \
	      guichan/include/guichan/image.hpp \
	      guichan/include/guichan/input.hpp \
	      guichan/include/guichan/inputevent.hpp \
	      guichan/include/guichan/key.hpp \
	      guichan/include/guichan/keyevent.hpp \
	      guichan/include/guichan/keyinput.hpp \
	      guichan/include/guichan/keylistener.hpp \
	      guichan/include/guichan/listmodel.hpp \
	      guichan/include/guichan/mouseevent.hpp \
	      guichan/include/guichan/mouseinput.hpp \
	      guichan/include/guichan/mouselistener.hpp \
	      guichan/include/guichan/platform.hpp \
	      guichan/include/guichan/rectangle.hpp \
	      guichan/include/guichan/selectionevent.hpp \
	      guichan/include/guichan/selectionlistener.hpp \
	      guichan/include/guichan/sdl/sdlpixel.hpp \
	      guichan/include/guichan/widget.hpp \
	      guichan/include/guichan/widgetlistener.hpp \
	      guichan/include/guichan/widgets/button.hpp \
	      guichan/include/guichan/widgets/checkbox.hpp \
	      guichan/include/guichan/widgets/container.hpp \
	      guichan/include/guichan/widgets/label.hpp \
	      guichan/include/guichan/widgets/listbox.hpp \
	      guichan/include/guichan/widgets/radiobutton.hpp \
	      guichan/include/guichan/widgets/scrollarea.hpp \
	      guichan/include/guichan/widgets/slider.hpp \
	      guichan/include/guichan/widgets/textbox.hpp \
	      guichan/include/guichan/widgets/textfield.hpp \
	      guichan/include/guichan/widgets/window.hpp

manaplus_SOURCES += guichan/actionevent.cpp \
	      guichan/basiccontainer.cpp \
	      guichan/cliprectangle.cpp \
	      guichan/color.cpp \
	      guichan/event.cpp \
	      guichan/exception.cpp \
	      guichan/focushandler.cpp \
	      guichan/font.cpp \
	      guichan/graphics.cpp \
	      guichan/gui.cpp \
	      guichan/image.cpp \
	      guichan/inputevent.cpp \
	      guichan/key.cpp \
	      guichan/keyevent.cpp \
	      guichan/keyinput.cpp \
	      guichan/mouseevent.cpp \
	      guichan/mouseinput.cpp \
	      guichan/rectangle.cpp \
	      guichan/selectionevent.cpp \
	      guichan/widget.cpp \
	      guichan/widgets/button.cpp \
	      guichan/widgets/checkbox.cpp \
	      guichan/widgets/container.cpp \
	      guichan/widgets/label.cpp \
	      guichan/widgets/listbox.cpp \
	      guichan/widgets/radiobutton.cpp \
	      guichan/widgets/scrollarea.cpp \
	      guichan/widgets/slider.cpp \
	      guichan/widgets/textbox.cpp \
	      guichan/widgets/textfield.cpp \
	      guichan/widgets/window.cpp
endif

manaplus_SOURCES += gui/widgets/avatarlistbox.cpp \
	      gui/widgets/avatarlistbox.h \
	      gui/widgets/tabs/battletab.cpp \
	      gui/widgets/tabs/battletab.h \
	      gui/widgets/browserbox.cpp \
	      gui/widgets/browserbox.h \
	      gui/widgets/button.cpp \
	      gui/widgets/button.h \
	      gui/widgets/characterdisplay.cpp \
	      gui/widgets/characterdisplay.h \
	      gui/widgets/characterviewbase.h \
	      gui/widgets/characterviewnormal.cpp \
	      gui/widgets/characterviewnormal.h \
	      gui/widgets/characterviewsmall.cpp \
	      gui/widgets/characterviewsmall.h \
	      gui/widgets/tabs/chattab.cpp \
	      gui/widgets/tabs/chattab.h \
	      gui/widgets/checkbox.cpp \
	      gui/widgets/checkbox.h \
	      gui/widgets/colormodel.cpp \
	      gui/widgets/colormodel.h \
	      gui/widgets/colorpage.cpp \
	      gui/widgets/colorpage.h \
	      gui/widgets/container.cpp \
	      gui/widgets/container.h \
	      gui/widgets/desktop.cpp \
	      gui/widgets/desktop.h \
	      gui/widgets/dropdown.cpp \
	      gui/widgets/dropdown.h \
	      gui/widgets/emoteshortcutcontainer.cpp \
	      gui/widgets/emoteshortcutcontainer.h \
	      gui/widgets/extendedlistbox.cpp \
	      gui/widgets/extendedlistbox.h \
	      gui/widgets/extendedlistmodel.h \
	      gui/widgets/extendednamesmodel.cpp \
	      gui/widgets/extendednamesmodel.h \
	      gui/widgets/flowcontainer.cpp \
	      gui/widgets/flowcontainer.h \
	      gui/widgets/tabs/gmtab.cpp \
	      gui/widgets/tabs/gmtab.h \
	      gui/widgets/tabs/guildchattab.cpp \
	      gui/widgets/tabs/guildchattab.h \
	      gui/widgets/guitable.cpp \
	      gui/widgets/guitable.h \
	      gui/widgets/horizontcontainer.cpp \
	      gui/widgets/horizontcontainer.h \
	      gui/widgets/icon.cpp \
	      gui/widgets/icon.h \
	      gui/widgets/inttextfield.cpp \
	      gui/widgets/inttextfield.h \
	      gui/widgets/itemcontainer.cpp \
	      gui/widgets/itemcontainer.h \
	      gui/widgets/itemlinkhandler.cpp \
	      gui/widgets/itemlinkhandler.h \
	      gui/widgets/dropshortcutcontainer.cpp \
	      gui/widgets/dropshortcutcontainer.h \
	      gui/widgets/emotepage.cpp \
	      gui/widgets/emotepage.h \
	      gui/widgets/itemshortcutcontainer.cpp \
	      gui/widgets/itemshortcutcontainer.h \
	      gui/widgets/spellshortcutcontainer.cpp \
	      gui/widgets/spellshortcutcontainer.h \
	      gui/widgets/label.cpp \
	      gui/widgets/label.h \
	      gui/widgets/tabs/langtab.cpp \
	      gui/widgets/tabs/langtab.h \
	      gui/widgets/layout.cpp \
	      gui/widgets/layout.h \
	      gui/widgets/layouthelper.cpp \
	      gui/widgets/layouthelper.h \
	      gui/widgets/linkhandler.h \
	      gui/widgets/listbox.cpp \
	      gui/widgets/listbox.h \
	      gui/widgets/mouseevent.h \
	      gui/widgets/namesmodel.cpp \
	      gui/widgets/namesmodel.h \
	      gui/widgets/passwordfield.cpp \
	      gui/widgets/passwordfield.h \
	      gui/widgets/playerbox.cpp \
	      gui/widgets/playerbox.h \
	      gui/widgets/popup.cpp \
	      gui/widgets/popup.h \
	      gui/widgets/popuplist.cpp \
	      gui/widgets/popuplist.h \
	      gui/widgets/progressbar.cpp \
	      gui/widgets/progressbar.h \
	      gui/widgets/progressindicator.cpp \
	      gui/widgets/progressindicator.h \
	      gui/widgets/radiobutton.cpp \
	      gui/widgets/radiobutton.h \
	      gui/widgets/radiogroup.cpp \
	      gui/widgets/radiogroup.h \
	      gui/widgets/scrollarea.cpp \
	      gui/widgets/scrollarea.h \
	      gui/widgets/setupitem.cpp \
	      gui/widgets/setupitem.h \
	      gui/widgets/tabs/setuptab.cpp \
	      gui/widgets/tabs/setuptab.h \
	      gui/widgets/tabs/setuptabscroll.cpp \
	      gui/widgets/tabs/setuptabscroll.h \
	      gui/widgets/setuptouchitem.cpp \
	      gui/widgets/setuptouchitem.h \
	      gui/widgets/shopitems.cpp \
	      gui/widgets/shopitems.h \
	      gui/widgets/shoplistbox.cpp \
	      gui/widgets/shoplistbox.h \
	      gui/widgets/shortcutcontainer.cpp \
	      gui/widgets/shortcutcontainer.h \
	      gui/widgets/skilldata.cpp \
	      gui/widgets/skilldata.h \
	      gui/widgets/skillinfo.cpp \
	      gui/widgets/skillinfo.h \
	      gui/widgets/skillmodel.cpp \
	      gui/widgets/skillmodel.h \
	      gui/widgets/slider.cpp \
	      gui/widgets/slider.h \
	      gui/widgets/sliderlist.cpp \
	      gui/widgets/sliderlist.h \
	      gui/widgets/tabs/tab.cpp \
	      gui/widgets/tabs/tab.h \
	      gui/widgets/tabbedarea.cpp \
	      gui/widgets/tabbedarea.h \
	      gui/widgets/tablemodel.cpp \
	      gui/widgets/tablemodel.h \
	      gui/widgets/tabstrip.cpp \
	      gui/widgets/tabstrip.h \
	      gui/widgets/textbox.cpp \
	      gui/widgets/textbox.h \
	      gui/widgets/textfield.cpp \
	      gui/widgets/textfield.h \
	      gui/widgets/textpreview.cpp \
	      gui/widgets/textpreview.h \
	      gui/widgets/tabs/tradetab.cpp \
	      gui/widgets/tabs/tradetab.h \
	      gui/widgets/vertcontainer.cpp \
	      gui/widgets/vertcontainer.h \
	      gui/widgets/tabs/whispertab.cpp \
	      gui/widgets/tabs/whispertab.h \
	      gui/widgets/widget2.h \
	      gui/widgets/widgetgroup.cpp \
	      gui/widgets/widgetgroup.h \
	      gui/widgets/window.cpp \
	      gui/widgets/window.h \
	      gui/widgets/windowcontainer.cpp \
	      gui/widgets/windowcontainer.h \
	      gui/popups/beingpopup.cpp \
	      gui/popups/beingpopup.h \
	      gui/windows/buydialog.cpp \
	      gui/windows/buydialog.h \
	      gui/windows/buyselldialog.cpp \
	      gui/windows/buyselldialog.h \
	      gui/windows/changeemaildialog.cpp \
	      gui/windows/changeemaildialog.h \
	      gui/windows/changepassworddialog.cpp \
	      gui/windows/changepassworddialog.h \
	      gui/windows/charselectdialog.cpp \
	      gui/windows/charselectdialog.h \
	      gui/windows/charcreatedialog.cpp \
	      gui/windows/charcreatedialog.h \
	      gui/windows/chatwindow.cpp \
	      gui/windows/chatwindow.h \
	      gui/windows/confirmdialog.cpp \
	      gui/windows/confirmdialog.h \
	      gui/windows/connectiondialog.cpp \
	      gui/windows/connectiondialog.h \
	      gui/windows/debugwindow.cpp \
	      gui/windows/debugwindow.h \
	      gui/windows/didyouknowwindow.cpp \
	      gui/windows/didyouknowwindow.h \
	      gui/windows/editdialog.cpp \
	      gui/windows/editdialog.h \
	      gui/windows/editserverdialog.cpp \
	      gui/windows/editserverdialog.h \
	      gui/windows/emotewindow.cpp \
	      gui/windows/emotewindow.h \
	      gui/windows/equipmentwindow.cpp \
	      gui/windows/equipmentwindow.h \
	      gui/focushandler.cpp \
	      gui/focushandler.h \
	      gui/gui.cpp \
	      gui/gui.h \
	      gui/windows/helpwindow.cpp \
	      gui/windows/helpwindow.h \
	      gui/windows/inventorywindow.cpp \
	      gui/windows/inventorywindow.h \
	      gui/windows/itemamountwindow.cpp \
	      gui/windows/itemamountwindow.h \
	      gui/popups/itempopup.cpp \
	      gui/popups/itempopup.h \
	      gui/popups/spellpopup.cpp \
	      gui/popups/spellpopup.h \
	      gui/popups/statuspopup.cpp \
	      gui/popups/statuspopup.h \
	      gui/windows/killstats.cpp \
	      gui/windows/killstats.h \
	      gui/windows/logindialog.cpp \
	      gui/windows/logindialog.h \
	      gui/windows/minimap.cpp \
	      gui/windows/minimap.h \
	      gui/windows/ministatuswindow.cpp \
	      gui/windows/ministatuswindow.h \
	      gui/windows/npcdialog.cpp \
	      gui/windows/npcdialog.h \
	      gui/windows/npcpostdialog.cpp \
	      gui/windows/npcpostdialog.h \
	      gui/windows/okdialog.cpp \
	      gui/windows/okdialog.h \
	      gui/windows/outfitwindow.cpp \
	      gui/windows/outfitwindow.h \
	      gui/windows/botcheckerwindow.cpp \
	      gui/windows/botcheckerwindow.h \
	      gui/windows/textcommandeditor.cpp \
	      gui/windows/textcommandeditor.h \
	      gui/palette.cpp \
	      gui/palette.h \
	      gui/popups/popupmenu.cpp \
	      gui/popups/popupmenu.h \
	      gui/windows/questswindow.cpp \
	      gui/windows/questswindow.h \
	      gui/windows/quitdialog.cpp \
	      gui/windows/quitdialog.h \
	      gui/windows/registerdialog.cpp \
	      gui/windows/registerdialog.h \
	      gui/sdlinput.cpp \
	      gui/sdlinput.h \
	      gui/windows/selldialog.cpp \
	      gui/windows/selldialog.h \
	      gui/windows/serverdialog.cpp \
	      gui/windows/serverdialog.h \
	      gui/windows/setup.cpp \
	      gui/windows/setup.h \
	      gui/widgets/tabs/setup_audio.cpp \
	      gui/widgets/tabs/setup_audio.h \
	      gui/widgets/tabs/setup_colors.cpp \
	      gui/widgets/tabs/setup_colors.h \
	      gui/widgets/tabs/setup_joystick.cpp \
	      gui/widgets/tabs/setup_joystick.h \
	      gui/widgets/tabs/setup_other.cpp \
	      gui/widgets/tabs/setup_other.h \
	      gui/widgets/tabs/setup_theme.cpp \
	      gui/widgets/tabs/setup_theme.h \
	      gui/widgets/tabs/setup_touch.cpp \
	      gui/widgets/tabs/setup_touch.h \
	      gui/widgets/tabs/setup_chat.cpp \
	      gui/widgets/tabs/setup_chat.h \
	      gui/widgets/tabs/setup_input.cpp \
	      gui/widgets/tabs/setup_input.h \
	      gui/widgets/tabs/setup_perfomance.cpp \
	      gui/widgets/tabs/setup_perfomance.h \
	      gui/widgets/tabs/setup_players.cpp \
	      gui/widgets/tabs/setup_players.h \
	      gui/widgets/tabs/setup_relations.cpp \
	      gui/widgets/tabs/setup_relations.h \
	      gui/widgets/tabs/setup_video.cpp \
	      gui/widgets/tabs/setup_video.h \
	      gui/widgets/tabs/setup_visual.cpp \
	      gui/widgets/tabs/setup_visual.h \
	      gui/setupactiondata.h \
	      gui/sdlfont.cpp \
	      gui/sdlfont.h \
	      gui/windows/shopwindow.cpp \
	      gui/windows/shopwindow.h \
	      gui/windows/shortcutwindow.cpp \
	      gui/windows/shortcutwindow.h \
	      gui/windows/skilldialog.cpp \
	      gui/windows/skilldialog.h \
	      gui/windows/socialwindow.cpp \
	      gui/windows/socialwindow.h \
	      gui/popups/speechbubble.cpp \
	      gui/popups/speechbubble.h \
	      gui/windows/statuswindow.cpp \
	      gui/windows/statuswindow.h \
	      gui/windows/textdialog.cpp \
	      gui/windows/textdialog.h \
	      gui/popups/textpopup.cpp \
	      gui/popups/textpopup.h \
	      gui/theme.cpp \
	      gui/theme.h \
	      gui/windows/tradewindow.cpp \
	      gui/windows/tradewindow.h \
	      gui/windows/unregisterdialog.cpp \
	      gui/windows/unregisterdialog.h \
	      gui/windows/updaterwindow.cpp \
	      gui/windows/updaterwindow.h \
	      gui/userpalette.cpp \
	      gui/userpalette.h \
	      gui/viewport.cpp \
	      gui/viewport.h \
	      gui/windows/whoisonline.cpp \
	      gui/windows/whoisonline.h \
	      gui/windowmenu.cpp \
	      gui/windowmenu.h \
	      gui/windows/worldselectdialog.cpp \
	      gui/windows/worldselectdialog.h \
	      net/adminhandler.h \
	      net/beinghandler.h \
	      net/buysellhandler.h \
	      net/charserverhandler.cpp \
	      net/charserverhandler.h \
	      net/chathandler.h \
	      net/download.cpp \
	      net/download.h \
	      net/gamehandler.h \
	      net/generalhandler.h \
	      net/guildhandler.h \
	      net/inventoryhandler.h \
	      net/logindata.h \
	      net/loginhandler.h \
	      net/messagehandler.h \
	      net/messagein.cpp \
	      net/messagein.h \
	      net/messageout.cpp \
	      net/messageout.h \
	      net/net.cpp \
	      net/net.h \
	      net/netconsts.h \
	      net/npchandler.h \
	      net/partyhandler.h \
	      net/pethandler.h \
	      net/playerhandler.h \
	      net/sdltcpnet.cpp \
	      net/sdltcpnet.h \
	      net/serverinfo.h \
	      net/skillhandler.h \
	      net/tradehandler.h \
	      net/worldinfo.h \
	      net/packetcounters.cpp \
	      net/packetcounters.h \
	      resources/action.cpp \
	      resources/action.h \
	      resources/ambientlayer.cpp \
	      resources/ambientlayer.h \
	      resources/animation.cpp \
	      resources/animation.h \
	      resources/atlasmanager.cpp \
	      resources/atlasmanager.h \
	      resources/db/avatardb.cpp \
	      resources/db/avatardb.h \
	      resources/beingcommon.cpp \
	      resources/beingcommon.h \
	      resources/beinginfo.cpp \
	      resources/beinginfo.h \
	      resources/db/chardb.cpp \
	      resources/db/chardb.h \
	      resources/db/colordb.cpp \
	      resources/db/colordb.h \
	      resources/cursor.cpp \
	      resources/cursor.h \
	      resources/db/deaddb.cpp \
	      resources/db/deaddb.h \
	      resources/dye.cpp \
	      resources/dye.h \
	      resources/dyecolor.h \
	      resources/db/emotedb.cpp \
	      resources/db/emotedb.h \
	      resources/fboinfo.h \
	      resources/image.cpp \
	      resources/image.h \
	      resources/imagehelper.cpp \
	      resources/imagehelper.h \
	      resources/imageset.cpp \
	      resources/imageset.h \
	      resources/imagewriter.cpp \
	      resources/imagewriter.h \
	      resources/db/itemdb.cpp \
	      resources/db/itemdb.h \
	      resources/iteminfo.h \
	      resources/iteminfo.cpp \
	      resources/db/mapdb.cpp \
	      resources/db/mapdb.h \
	      resources/mapreader.cpp \
	      resources/mapreader.h \
	      resources/db/monsterdb.cpp \
	      resources/db/monsterdb.h \
	      resources/db/npcdb.cpp \
	      resources/db/npcdb.h \
	      resources/openglimagehelper.cpp \
	      resources/openglimagehelper.h \
	      resources/db/palettedb.cpp \
	      resources/db/palettedb.h \
	      resources/db/petdb.cpp \
	      resources/db/petdb.h \
	      resources/resource.cpp \
	      resources/resource.h \
	      resources/resourcemanager.cpp \
	      resources/resourcemanager.h \
	      resources/sdl2imagehelper.cpp \
	      resources/sdl2imagehelper.h \
	      resources/sdl2softwareimagehelper.cpp \
	      resources/sdl2softwareimagehelper.h \
	      resources/sdlimagehelper.cpp \
	      resources/sdlimagehelper.h \
	      resources/sdlmusic.cpp \
	      resources/sdlmusic.h \
	      resources/db/sounddb.cpp \
	      resources/db/sounddb.h \
	      resources/soundeffect.cpp \
	      resources/soundeffect.h \
	      resources/soundinfo.h \
	      resources/spritedef.cpp \
	      resources/spritedef.h \
	      resources/subimage.cpp \
	      resources/subimage.h \
	      resources/surfaceimagehelper.cpp \
	      resources/surfaceimagehelper.h \
	      resources/wallpaper.cpp \
	      resources/wallpaper.h \
	      utils/translation/podict.cpp \
	      utils/translation/podict.h \
	      utils/translation/poparser.cpp \
	      utils/translation/poparser.h \
	      utils/translation/translationmanager.cpp \
	      utils/translation/translationmanager.h \
	      utils/base64.cpp \
	      utils/base64.h \
	      utils/checkutils.cpp \
	      utils/checkutils.h \
	      utils/copynpaste.cpp \
	      utils/copynpaste.h \
	      utils/cpu.cpp \
	      utils/cpu.h \
	      utils/dtor.h \
	      utils/files.cpp \
	      utils/files.h \
	      utils/fuzzer.cpp \
	      utils/fuzzer.h \
	      utils/gettext.h \
	      utils/langs.cpp \
	      utils/langs.h \
	      utils/mathutils.h \
	      utils/mkdir.cpp \
	      utils/mkdir.h \
	      utils/paths.cpp \
	      utils/paths.h \
	      utils/perfomance.cpp \
	      utils/perfomance.h \
	      utils/physfscheckutils.cpp \
	      utils/physfscheckutils.h \
	      utils/physfsrwops.cpp \
	      utils/physfsrwops.h \
	      utils/physfstools.cpp \
	      utils/physfstools.h \
	      utils/process.cpp \
	      utils/process.h \
	      utils/sdl2helper.cpp \
	      utils/sdl2helper.h \
	      utils/sdlcheckutils.cpp \
	      utils/sdlcheckutils.h \
	      utils/sdlhelper.cpp \
	      utils/sdlhelper.h \
	      utils/specialfolder.cpp \
	      utils/specialfolder.h \
	      utils/stringutils.cpp \
	      utils/stringutils.h \
	      utils/stringvector.h \
	      utils/timer.cpp \
	      utils/timer.h \
	      utils/mutex.h \
	      utils/xml.cpp \
	      utils/xml.h \
	      test/testlauncher.cpp \
	      test/testlauncher.h \
	      test/testmain.cpp \
	      test/testmain.h \
	      actionmanager.cpp \
	      actionmanager.h \
	      being/actor.cpp \
	      being/actor.h \
	      being/actorsprite.cpp \
	      being/actorsprite.h \
	      being/actorspritelistener.h \
	      actormanager.cpp \
	      actormanager.h \
	      animatedsprite.cpp \
	      animatedsprite.h \
	      animationdelayload.cpp \
	      animationdelayload.h \
	      particle/animationparticle.cpp \
	      particle/animationparticle.h \
	      auctionmanager.cpp \
	      auctionmanager.h \
	      avatar.cpp \
	      avatar.h \
	      being/being.cpp \
	      being/being.h \
	      being/beingcacheentry.h \
	      beingequipbackend.cpp \
	      beingequipbackend.h \
	      spellmanager.cpp \
	      spellmanager.h \
	      chatlogger.cpp \
	      chatlogger.h \
	      client.cpp \
	      client.h \
	      commandhandler.cpp \
	      commandhandler.h \
	      commands.cpp \
	      commands.h \
	      being/compoundsprite.cpp \
	      being/compoundsprite.h \
	      configlistener.h \
	      configuration.cpp \
	      configuration.h \
	      debug.h \
	      defaults.cpp \
	      defaults.h \
	      depricatedevent.cpp \
	      depricatedevent.h \
	      depricatedlistener.cpp \
	      depricatedlistener.h \
	      dragdrop.h \
	      dropshortcut.cpp \
	      dropshortcut.h \
	      effectmanager.cpp \
	      effectmanager.h \
	      emoteshortcut.cpp \
	      emoteshortcut.h \
	      equipment.h \
	      eventsmanager.cpp \
	      eventsmanager.h \
	      flooritem.cpp \
	      flooritem.h \
	      game.cpp \
	      game.h \
	      render/graphics.cpp \
	      render/graphics.h \
	      graphicsmanager.cpp \
	      graphicsmanager.h \
	      graphicsvertexes.cpp \
	      graphicsvertexes.h \
	      guild.cpp \
	      guild.h \
	      guildmanager.cpp \
	      guildmanager.h \
	      particle/imageparticle.cpp \
	      particle/imageparticle.h \
	      imagesprite.cpp \
	      imagesprite.h \
	      inventory.cpp \
	      inventory.h \
	      item.cpp \
	      item.h \
	      itemshortcut.cpp \
	      itemshortcut.h \
	      itemsoundmanager.cpp \
	      itemsoundmanager.h \
	      spellshortcut.cpp \
	      spellshortcut.h \
	      textcommand.cpp \
	      textcommand.h \
	      input/inputevent.cpp \
	      input/inputevent.h \
	      input/inputmanager.cpp \
	      input/inputmanager.h \
	      input/joystick.cpp \
	      input/joystick.h \
	      input/keyboardconfig.cpp \
	      input/keyboardconfig.h \
	      input/keyboarddata.h \
	      input/keydata.h \
	      input/keyevent.cpp \
	      input/keyevent.h \
	      input/keyinput.cpp \
	      input/keyinput.h \
	      input/multitouchmanager.cpp \
	      input/multitouchmanager.h \
	      localconsts.h \
	      being/localplayer.cpp \
	      being/localplayer.h \
	      logger.cpp \
	      logger.h \
	      main.cpp \
	      main.h \
	      map.cpp \
	      map.h \
	      mapheights.cpp \
	      mapheights.h \
	      maplayer.cpp \
	      maplayer.h \
	      render/mgl.cpp \
	      render/mgl.h \
	      render/mobileopenglgraphics.cpp \
	      render/mobileopenglgraphics.h \
	      mouseinput.cpp \
	      mouseinput.h \
	      navigationmanager.cpp \
	      navigationmanager.h \
	      render/normalopenglgraphics.cpp \
	      render/normalopenglgraphics.h \
	      notifications.h \
	      notifymanager.cpp \
	      notifymanager.h \
	      render/graphics_calcImageRect.hpp \
	      render/graphics_drawImageRect.hpp \
	      render/nullopenglgraphics.cpp \
	      render/nullopenglgraphics.h \
	      render/openglgraphicsdef.hpp \
	      render/renderers.cpp \
	      render/renderers.h \
	      render/rendererslistsdl.h \
	      render/rendererslistsdl2.h \
	      particle/particle.cpp \
	      particle/particle.h \
	      particle/particlecontainer.cpp \
	      particle/particlecontainer.h \
	      particle/particleemitter.cpp \
	      particle/particleemitter.h \
	      particle/particleemitterprop.h \
	      particle/particleinfo.h \
	      party.cpp \
	      party.h \
	      being/playerinfo.cpp \
	      being/playerinfo.h \
	      being/playerrelations.cpp \
	      being/playerrelations.h \
	      position.cpp \
	      position.h \
	      properties.h \
	      particle/rotationalparticle.cpp \
	      particle/rotationalparticle.h \
	      render/safeopenglgraphics.cpp\
	      render/safeopenglgraphics.h \
	      render/sdl2graphics.cpp \
	      render/sdl2graphics.h \
	      render/sdl2softwaregraphics.cpp \
	      render/sdl2softwaregraphics.h \
	      render/sdlgraphics.cpp \
	      render/sdlgraphics.h \
	      sdlshared.h \
	      shopitem.cpp \
	      shopitem.h \
	      simpleanimation.cpp \
	      simpleanimation.h \
	      soundconsts.h \
	      soundmanager.cpp \
	      soundmanager.h \
	      sprite.h \
	      statuseffect.cpp \
	      statuseffect.h \
	      render/surfacegraphics.cpp \
	      render/surfacegraphics.h \
	      text.cpp \
	      text.h \
	      textmanager.cpp \
	      textmanager.h \
	      particle/textparticle.cpp \
	      particle/textparticle.h \
	      tileset.h \
	      touchactions.cpp \
	      touchactions.h \
	      touchmanager.cpp \
	      touchmanager.h \
	      units.cpp \
	      units.h \
	      variabledata.h \
	      vector.cpp \
	      vector.h \
	      walklayer.cpp \
	      walklayer.h \
	      winver.h

manaplus_SOURCES += \
	      net/ea/gui/guildtab.cpp \
	      net/ea/gui/guildtab.h \
	      net/ea/gui/partytab.cpp \
	      net/ea/gui/partytab.h \
	      net/ea/adminhandler.cpp \
	      net/ea/adminhandler.h \
	      net/ea/beinghandler.cpp \
	      net/ea/beinghandler.h \
	      net/ea/buysellhandler.cpp \
	      net/ea/buysellhandler.h \
	      net/ea/charserverhandler.cpp \
	      net/ea/charserverhandler.h \
	      net/ea/chathandler.cpp \
	      net/ea/chathandler.h \
	      net/ea/eaprotocol.h \
	      net/ea/gamehandler.cpp \
	      net/ea/gamehandler.h \
	      net/ea/guildhandler.cpp \
	      net/ea/guildhandler.h \
	      net/ea/inventoryhandler.cpp \
	      net/ea/inventoryhandler.h \
	      net/ea/itemhandler.cpp \
	      net/ea/itemhandler.h \
	      net/ea/loginhandler.cpp \
	      net/ea/loginhandler.h \
	      net/ea/network.cpp \
	      net/ea/network.h \
	      net/ea/npchandler.cpp \
	      net/ea/npchandler.h \
	      net/ea/partyhandler.cpp \
	      net/ea/partyhandler.h \
	      net/ea/playerhandler.cpp \
	      net/ea/playerhandler.h \
	      net/ea/skillhandler.cpp \
	      net/ea/skillhandler.h \
	      net/ea/token.h \
	      net/ea/tradehandler.cpp \
	      net/ea/tradehandler.h \
	      net/tmwa/gui/guildtab.cpp \
	      net/tmwa/gui/guildtab.h \
	      net/tmwa/gui/partytab.cpp \
	      net/tmwa/gui/partytab.h \
	      net/tmwa/adminhandler.cpp \
	      net/tmwa/adminhandler.h \
	      net/tmwa/beinghandler.cpp \
	      net/tmwa/beinghandler.h \
	      net/tmwa/buysellhandler.cpp \
	      net/tmwa/buysellhandler.h \
	      net/tmwa/charserverhandler.cpp \
	      net/tmwa/charserverhandler.h \
	      net/tmwa/chathandler.cpp \
	      net/tmwa/chathandler.h \
	      net/tmwa/gamehandler.cpp \
	      net/tmwa/gamehandler.h \
	      net/tmwa/generalhandler.cpp \
	      net/tmwa/generalhandler.h \
	      net/tmwa/guildhandler.cpp \
	      net/tmwa/guildhandler.h \
	      net/tmwa/inventoryhandler.cpp \
	      net/tmwa/inventoryhandler.h \
	      net/tmwa/itemhandler.cpp \
	      net/tmwa/itemhandler.h \
	      net/tmwa/loginhandler.cpp \
	      net/tmwa/loginhandler.h \
	      net/tmwa/messagehandler.cpp \
	      net/tmwa/messagehandler.h \
	      net/tmwa/messagein.cpp \
	      net/tmwa/messagein.h \
	      net/tmwa/messageout.cpp \
	      net/tmwa/messageout.h \
	      net/tmwa/network.cpp \
	      net/tmwa/network.h \
	      net/tmwa/npchandler.cpp \
	      net/tmwa/npchandler.h \
	      net/tmwa/partyhandler.cpp \
	      net/tmwa/partyhandler.h \
	      net/tmwa/pethandler.cpp \
	      net/tmwa/pethandler.h \
	      net/tmwa/playerhandler.cpp \
	      net/tmwa/playerhandler.h \
	      net/tmwa/protocol.h \
	      net/tmwa/questhandler.cpp \
	      net/tmwa/questhandler.h \
	      net/tmwa/skillhandler.cpp \
	      net/tmwa/skillhandler.h \
	      net/tmwa/tradehandler.cpp \
	      net/tmwa/tradehandler.h

if ENABLE_EATHENA
manaplus_CXXFLAGS += -DEATHENA_SUPPORT
manaplus_SOURCES += net/eathena/gui/guildtab.cpp \
	      net/eathena/gui/guildtab.h \
	      net/eathena/gui/partytab.cpp \
	      net/eathena/gui/partytab.h \
	      net/eathena/adminhandler.cpp \
	      net/eathena/adminhandler.h \
	      net/eathena/beinghandler.cpp \
	      net/eathena/beinghandler.h \
	      net/eathena/buysellhandler.cpp \
	      net/eathena/buysellhandler.h \
	      net/eathena/charserverhandler.cpp \
	      net/eathena/charserverhandler.h \
	      net/eathena/chathandler.cpp \
	      net/eathena/chathandler.h \
	      net/eathena/gamehandler.cpp \
	      net/eathena/gamehandler.h \
	      net/eathena/generalhandler.cpp \
	      net/eathena/generalhandler.h \
	      net/eathena/guildhandler.cpp \
	      net/eathena/guildhandler.h \
	      net/eathena/inventoryhandler.cpp \
	      net/eathena/inventoryhandler.h \
	      net/eathena/itemhandler.cpp \
	      net/eathena/itemhandler.h \
	      net/eathena/loginhandler.cpp \
	      net/eathena/loginhandler.h \
	      net/eathena/messagehandler.cpp \
	      net/eathena/messagehandler.h \
	      net/eathena/messagein.cpp \
	      net/eathena/messagein.h \
	      net/eathena/messageout.cpp \
	      net/eathena/messageout.h \
	      net/eathena/network.cpp \
	      net/eathena/network.h \
	      net/eathena/npchandler.cpp \
	      net/eathena/npchandler.h \
	      net/eathena/partyhandler.cpp \
	      net/eathena/partyhandler.h \
	      net/eathena/playerhandler.cpp \
	      net/eathena/playerhandler.h \
	      net/eathena/protocol.h \
	      net/eathena/skillhandler.cpp \
	      net/eathena/skillhandler.h \
	      net/eathena/tradehandler.cpp \
	      net/eathena/tradehandler.h
endif

manaplus_SOURCES += \
	      mumblemanager.cpp \
	      mumblemanager.h

if ENABLE_UNITTESTS
manaplus_CXXFLAGS += -DUNITTESTS
manaplus_SOURCES += \
	      animatedsprite_unittest.cc \
	      gui/sdlfont_unittest.cc \
	      gui/widgets/browserbox_unittest.cc \
	      utils/files_unittest.cc \
	      utils/stringutils_unittest.cc \
	      resources/dye_unittest.cc
endif

EXTRA_DIST = CMakeLists.txt \
	     winver.h.in \
	     manaplus.rc \
	     SDLMain.h \
	     SDLMain.m

# set the include path found by configure
AM_CPPFLAGS = $(all_includes)
